argocd/budget-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budget-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - budget.local
      secretName: budget-tls-secret
  rules:
    - host: budget.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rails-service
                port:
                  number: 3000
